# ChangeLog for media-libs/xine-lib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.651 2012/01/03 19:00:23 ssuominen Exp $

*xine-lib-1.2.0 (03 Jan 2012)

  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +xine-lib-1.2.0.ebuild,
  xine-lib-1.2.9999.ebuild:
  Version bump and syncronize ebuild(s) wrt #397515

  31 Dec 2011; Agostino Sarubbo <ago@gentoo.org> xine-lib-1.1.20.ebuild:
  Stable for AMD64, wrt bug #396521

  09 Dec 2011; Alexis Ballier <aballier@gentoo.org> xine-lib-1.1.20.ebuild,
  +files/xine-lib-1.1.20-stat.patch:
  add patch from upstream to fix build on *BSD

*xine-lib-1.1.20 (16 Nov 2011)

  16 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> +xine-lib-1.1.20.ebuild:
  Version bump.

  30 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.9999.ebuild:
  Rename obsolete USE="v4l2" to USE="v4l" wrt #385241

*xine-lib-1.2.9999 (15 Oct 2011)

  15 Oct 2011; Christian Ruppert <idl0r@gentoo.org> +xine-lib-1.2.9999.ebuild,
  metadata.xml:
  Add live ebuild for xine-lib-1.2

  09 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.1.19.ebuild:
  Remove useless libtool file libxine.la

  12 Sep 2011; Tim Harder <radhermit@gentoo.org>
  files/xine-lib-1.1.19-ffmpeg.patch:
  Fix build with newer versions of libav (bug #376419).

  11 May 2011; Alexis Ballier <aballier@gentoo.org> xine-lib-1.1.19.ebuild,
  +files/xine-lib-1.1.19-ffmpeg.patch:
  fix build with ffmpeg/libav trunk

  10 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> xine-lib-1.1.19.ebuild:
  Move to virtual/ffmpeg from media-video/ffmpeg. Fixes bug #362083.

  31 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> xine-lib-1.1.19.ebuild:
  Move back to media-video/ffmpeg as this is only package that actualy requires
  ffmpeg-0.5. Effectively allowing us to drop 0.5 virtual.

  26 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> xine-lib-1.1.19.ebuild: