@@ -11,17 +11,17 @@ DIST xine-lib-1.2.0.tar.xz 4878972 RMD160 17b73f43e2dc440137727f65d401c673273b12
 EBUILD xine-lib-1.1.19.ebuild 5675 RMD160 b34cf5a8030843ba98e7a90200e4c5e1518153e5 SHA1 d3ef71cc7ef26832f3bbe29d52416f0b22e047b6 SHA256 91daef9cfd2cd146646816e3f15eb5949ea4f8e7a5e05d639e5e621c4795c2da
 EBUILD xine-lib-1.1.20.ebuild 5415 RMD160 0a2a1933c159c8d16f0566ef8ef9f51e0d2d2f3a SHA1 8a31a4753a836043e61bfaab0c240a0abe595110 SHA256 3b688f1ae33b801e9fee6634cd1c009091cff575a707e79c9d99fd52072bb46d
 EBUILD xine-lib-1.2.0.ebuild 4980 RMD160 a62c4280b0fdfc3d66779178c58c4f80f70db074 SHA1 5d2e8069b9fb146d4a6d540e25b428dcd82f85f2 SHA256 3335dd5cf4adcc568006c8991013035e1f6466bc095ae006040ce755ef9df532
-EBUILD xine-lib-1.2.9999.ebuild 5026 RMD160 d6f1bf9e290c3034013deec3d2d126735e1a7e60 SHA1 d9fa2d8d8abbe0517ef5c93df7a79e0e378dacef SHA256 c57d313eaf5decc4b9b47cac93be3d2bcd3f750ae15d93e4f357af1599185b17
-MISC ChangeLog 75887 RMD160 6a0f8d3cbbf4e7b54d4c1ff43b3e49ed6002c8fb SHA1 f7e33a39be376ef7969c4af0d9469b1a11e48db6 SHA256 6fd1a3052a27eebc1369714d91a1a86e1300fbc86530025f6930bfe73a403f64
+EBUILD xine-lib-1.2.9999.ebuild 4982 RMD160 65c2531d156c611cc8191ed358351f1994be04c7 SHA1 107b25a8a24ac2c16a862469f5b6eebd86926bb6 SHA256 afae619acfdd7febebd353862834bc0529ef5483adf74bc956be5bfd9ce85604
+MISC ChangeLog 76063 RMD160 707d377f327a8e836fc31aaf30fac0fa9e6912e5 SHA1 9c3b3515b479b3575512ecdbab20ea04260f74e2 SHA256 98367540458d8414b765289757a61cba04eeffa5043c91d043c437a7b36a6a8a
 MISC metadata.xml 3072 RMD160 1e12a6a6a26545534c9a77ee57a04c3df6613772 SHA1 c0f3e790048f732dedb7de2478a1de54f327a2b7 SHA256 40718f6753a8cdbb8492ca71d3c335106fa7fe54cb4f6161ad1023ef8323af1e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPA1vrAAoJEEdUh39IaPFNQmMH/iUAbxflZU4XxmOEhq5kJjY0
-LU/Lh9yeRwryzbtSIZUZ7FWuephROW5YKTUWj7ebGNcaNKumCf/j21Q+9ZfguVVn
-bJ3YFpx97fljZfW7eVKuoQSqbn0/WwhdBpConiYnM+M0MO7IivDgKz+GpM5XpkKv
-dyDOQG8EVHGxa1YI5NSnLxCqAzBywtep9PI9osZdXY0KQ7nIC3nogGbb6ktNal8f
-0rnRPsVkHYRKlxmlc2/u7DQhOp6Te0DLe6P9KXcdIaQDdKoZDOkAk8MyJ9b8udZi
-ZjLponrAAiO4h90Xw7t9DFSiEWPxLo+P7OhntzI4Y4W0zJubPtqlJjyLsM98rl8=
-=OuCV
+iQEcBAEBAgAGBQJPA17QAAoJEEdUh39IaPFNpw0H+wW2jhL1/BfkTdC3K57PDVWt
+2DBNZnfpmHrVfA+d+inF63XnIvpYbiwS5+GOM0ZmTJATaUy624jIsaeOEOHARTeV
+Jt2HKOwAWRar59yJnTiIJOaYz6rqF/IbofOYK6pdBR8VQPU9Vm7gdInDKEKr4jhD
+NWLoHD5KvqXArd67EdpoquAB3r+DOJAjy5JPRHpb5DH42Sw6PqWYudJMQzkbB4x3
+yxWPkNgyfQKGuAZpGloiEflmTjPD060XcbLsTiqmciCbH6KX602Dqe67LZ6dvT14
+QR5DzP2yOgfT0vKtXbCKwKXiBf7AQVUCSgK6VidLmRqkSyMRfdlgqEDaL4NimHk=
+=/mTz
 -----END PGP SIGNATURE-----
