@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.651 2012/01/03 19:00:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.652 2012/01/03 20:04:18 ssuominen Exp $
+
+  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.9999.ebuild:
+  Remove USE="nls" from 1.2.9999 because sys-devel/gettext is always required
+  for autopoint.
 
 *xine-lib-1.2.0 (03 Jan 2012)
 
